# KernKlawLinux

./: CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  Dockerfile.test
ebpf/: file_watch.bpf.c  skill_trigger.bpf.c
nix/: flake.nix
packaging/: install.sh
packaging/debian/: control  postinst  rules
packaging/rpm/: kernklaw.spec
skills/example/: run.sh  skill-template.c  skill.json
src/common/: json_utils.c  json_utils.h  log.h  proto.h
src/daemon/: claw-daemon.c  ebpf_hooks.c  ebpf_hooks.h  ipc.c  ipc.h  ollama.c  ollama.h  skill_loader.c  skill_loader.h
src/shell/: claw-shell.c  parser.c  parser.h  workflow.c  workflow.h
src/skill-exec/: claw-skill-exec.c
src/uring/: http_client.c  http_client.h
systemd/: claw-daemon.service  claw-shell@.service
vagrant/: Vagrantfile
